2008-05-27  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:
	* vala/valathrowstatement.vala:
	* gobject/valaccodegenerator.vala:

	Fix temporary variable handling for throw statements

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	
	Improved performance of print statement

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	* vala/valageniescanner.vala: 
	
	Added optional indent attribute to allow spaces to be used in lieu of tabs for indents

2008-05-27  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	
	Made GLib using directive optional 

2008-05-26  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Memory): add atexit () and memory profile
	bindings, fixes bug #530627

2008-05-26  Marc-André Lureau  <marcandre.lureau@gmail.com>

	* vapi/glib-2.0.vapi (Object): add weak pointer references
	bindings and {freeze,thaw}_notify ()

2008-05-26  Jamie McCracken  <jamiemcc@gnome.org>

	* vala/valagenieparser.vala: 
	
	Fix initialiser expression in for statement


2008-05-26  Jürg Billeter  <j@bitron.ch>

	* vala/valaarraytype.vala:
	* vala/valaclass.vala:
	* vala/valacreationmethod.vala:
	* vala/valadatatype.vala:
	* vala/valadelegate.vala:
	* vala/valaenum.vala:
	* vala/valaerrordomain.vala:
	* vala/valainstancecast.vala:
	* vala/valaintegertype.vala:
	* vala/valainterface.vala:
	* vala/valainterfacewriter.vala:
	* vala/valaobjecttype.vala:
	* vala/valaobjecttypesymbol.vala:
	* vala/valasemanticanalyzer.vala:
	* vala/valasourcefile.vala:
	* vala/valastruct.vala:
	* vala/valasymbolresolver.vala:
	* vala/valatypeparameter.vala:
	* vala/valatypesymbol.vala:
	* vala/valavaluetype.vala:
	* gobject/valaccodeassignmentbinding.vala:
	* gobject/valaccodeclassbinding.vala:
	* gobject/valaccodeelementaccessbinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorsignal.vala:
	* gobject/valaccodeinterfacebinding.vala: