@@ -1,3 +1,9 @@
+2008-05-28  Jürg Billeter  <j@bitron.ch>
+
+	* ccode/valaccodecastexpression.vala:
+
+	Use parentheses to ensure that the full expression is cast
+
 2008-05-27  Jürg Billeter  <j@bitron.ch>
 
 	* vala/valasemanticanalyzer.vala:
